cis-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec:
  # DO NOT INCREASE REPLICA COUNT
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bigip-ctlr-deployment
  template:
    metadata:
      labels:
        app: k8s-bigip-ctlr-deployment
    spec:
      # Name of the Service Account bound to a Cluster Role with the required
      # permissions
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:2.11.1"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            # See the k8s-bigip-ctlr documentation for information about
            # all config options
            # https://clouddocs.f5.com/containers/latest/
              "--bigip-username=$(BIGIP_USERNAME)",
              "--bigip-password=$(BIGIP_PASSWORD)",
              #"--gtm-bigip-username=$(BIGIP_USERNAME)",
              #"--gtm-bigip-password=$(BIGIP_PASSWORD)",
              "--bigip-url=10.201.53.115",
              "--bigip-partition=kubernetes",
              #"--namespace=cis-crd",
              "--pool-member-type=nodeport",
              "--log-level=DEBUG",
              "--insecure=true",
              #"--custom-resource-mode=true",
              #"--manage-configmaps=false",
              #"--manage-ingress=false",
              #"--manage-routes=false",
              "--as3-validation=true",
              "--log-as3-response=true",
              #"--ipam=true", # update for ipam
              #"--disable-teems=true",
          ]
      serviceAccountName: bigip-ctlr
